# hakecoin

./: README.md
haskell/hakecoin/: LICENSE  README.md  hakecoin.cabal  stack.yaml
haskell/hakecoin/app/: Main.hs
haskell/hakecoin/src/: Lib.hs
python/: block.py
