name:                hakecoin
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gdmcbain/hakecoin#readme
license:             BSD3
license-file:        LICENSE
author:              G. D. McBain
maintainer:          gdmcbain@protonmail.com
copyright:           Copyright (C) 2017 G. D. McBain
category:            blockchain
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.8.1
                     , cryptohash >= 0.11.9
                     , datetime >= 0.3.1
  default-language:    Haskell2010

executable hakecoin-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hakecoin
  default-language:    Haskell2010

test-suite hakecoin-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hakecoin
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gdmcbain/hakecoin
